section secure-03 finish

--- a/src/home-02.html
+++ b/src/home-02.html
@@ -8,10 +8,90 @@
    <div class="wrapper">
       @@include('html/_header-02.htm',{})
       <main class="page">
-         <div class="proba__title _icon-berdle">
-            <p class="_icon-logo">PROTECT ALL YOUR DEVICES</p>
-         </div>
 
+         <section class="page__secure-02 secure-02">
+            <div class="secure-02__ficure">
+               <div class="secure-02__circle"></div>
+            </div>
+            <div class="secure-02__container">
+               <div class="secure-02__inner">
+                  <div class="secure-02__top">
+                     <div class="secure-02__item">
+                        <a class="secure-02__btn" href="#">SURFINGVPN</a>
+                        <div class="secure-02__contact">
+                           Customer Support: +31205231052
+                        </div>
+                     </div>
+                     <div class="secure-02__item">
+                        <a class="secure-02__btn" href="#">CANCEL MY MEMBERSHIP</a>
+                        <div class="secure-02__contact">
+                           Email: cs@surfingvpn.com
+                        </div>
+                     </div>
+                  </div>
+                  <div class="secure-02__content">
+                     <div class="secure-02__title">
+                        SECURE YOUR DIGITAL LIFE
+                     </div>
+                     <div class="secure-02__text">
+                        Browse the web safely & privately
+                     </div>
+                     <div class="secure-02__subtitle">
+                        PROTECT ALL YOUR DEVICES
+                     </div>
+                     <a class="secure-02__btn-big" href="#">DOWNLOAD NOW</a>
+                     <div class="secure-02__text">
+                        *Buy Trial License for USD1, EUR1, GBP1
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+
+         <section class="page__why-use-02 why-use-02">
+            <div class="why-use-02__container">
+               <div class="why-use-02__content">
+                  <div class="why-use-02__box">
+                     <div class="why-use-02__subtitle">WELCOME</div>
+                     <div class="why-use-02__title">WHY USE A VPN?</div>
+                     <div class="why-use-02__text">
+                        <p>
+                           Using the internet these days is more daunting than ever, with many types of cyberthreats.
+                        </p>
+                        <p>
+                           There is only one true way to use the internet privately, and that is with a VPN or Virtual
+                           Private Network. Whether you want to watch region-specific content or create a secure home
+                           office environment, VPNs can be more useful now than ever.
+                        </p>
+                     </div>
+                  </div>
+
+                  <div class="why-use-02__images">
+                     <div class="why-use-02__image">
+                        <img src="@img/why-use/group.jpg" alt="Image">                        
+                        <!-- <img src="@img/why-use/image-01.jpg" alt="Image"> -->
+                        <!-- <div class="why-use-02__image-small">
+                           <img src="@img/why-use/image-02.jpg" alt="Image">
+                        </div> -->
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+
+         <section class="page__advantages advantages">
+            <div class="advantages__container">
+               <div class="advantages__body">
+                  <div class="advantages__image">
+                     <img src="@img/advantages/pngwing.png" alt="Image">
+                     <div class="advantages__title advantages__title_1">HIGHLY <span>SECURE</span></div>
+                     <div class="advantages__title advantages__title_2"><span>UNLIMITED</span> DEVICES</div>
+                     <div class="advantages__title advantages__title_3"><span>HIGH </span>SPEED</div>
+                     <div class="advantages__title advantages__title_4">QUICK <span>CONNECTIVITY</span></div>
+                  </div>
+               </div>
+            </div>
+         </section>
 
          <section class="page__features features-02">
             <div class="features-02__container">
@@ -114,9 +194,9 @@
                      <a class="steps-02__btn-02" href="#">SELECT SERVER</a>
                      <a class="steps-02__btn-02" href="#">ACTIVATE & GO!</a>
                   </div>
-               </div>               
+               </div>
             </div>
-         </section>         
+         </section>
 
          <section class="page__protection-02 protection-02">
             <div class="protection-02__title title">
