--- a/src/home-03.html
+++ b/src/home-03.html
@@ -9,6 +9,40 @@
       @@include('html/_header-03.htm',{})
       <main class="page">
 
+         <section class="page__secure-03 secure-03">
+            <div class="secure-03__top">
+               <div class="secure-03__contact">
+                  Customer Support: +31205231052
+               </div>
+               <div class=secure-03__contact">
+                  Email: cs@surfingvpn.com
+               </div>
+            </div>
+            <div class="secure-03__inner">
+               <div class="secure-03__content">
+                  <div class="secure-03__container">
+                     <div class="secure-03__body">
+                        <div class="secure-03__title">SECURE YOUR DIGITAL LIFE</div>
+                        <div class="secure-03__text">
+                           Browse the web safely & privately
+                        </div>
+                        <div class="secure-03__subtitle">
+                           PROTECT ALL YOUR DEVICES
+                        </div>
+                        <a class="secure-03__btn" href="#">DOWNLOAD NOW</a>
+                        <div class="secure-03__text">
+                           *Buy Trial License for USD1, EUR1, GBP1
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="secure-03__image">
+                  <img src="@img/secure/iPhone.png" alt="Image">
+               </div>
+            </div>
+         </section>
+
+
          <section class="page__why-use-03 why-use-03">
             <div class="why-use-03__container">
                <div class="why-use-03__inner">
