шлифую  .why-use-03

--- a/src/home-02.html
+++ b/src/home-02.html
@@ -48,31 +48,38 @@
             </div>
          </section>
 
-         <section class="page__why-use-02 why-use-02">
-            <div class="why-use-02__container">
-               <div class="why-use-02__content">
-                  <div class="why-use-02__box">
-                     <div class="why-use-02__subtitle">WELCOME</div>
-                     <div class="why-use-02__title">WHY USE A VPN?</div>
-                     <div class="why-use-02__text">
-                        <p>
-                           Using the internet these days is more daunting than ever, with many types of cyberthreats.
-                        </p>
-                        <p>
-                           There is only one true way to use the internet privately, and that is with a VPN or Virtual
-                           Private Network. Whether you want to watch region-specific content or create a secure home
-                           office environment, VPNs can be more useful now than ever.
-                        </p>
+
+
+
+         <section class="page__service-5 service-5">
+
+            <div class="service-5__container">
+               <div class="service-5__info-2 info-2">
+                  <div class="info-2__content">
+                     <div class="info-2__box">
+                        <div class="info-2__subtitle">WELCOME</div>
+                        <div class="info-2__title">WHY USE A VPN?</div>
+                        <div class="info-2__text">
+                           <p>
+                              Using the internet these days is more daunting than ever, with many types of cyberthreats.
+                           </p>
+                           <p>
+                              There is only one true way to use the internet privately, and that is with a VPN or
+                              Virtual
+                              Private Network. Whether you want to watch region-specific content or create a secure home
+                              office environment, VPNs can be more useful now than ever.
+                           </p>
+                        </div>
                      </div>
                   </div>
+               </div>
 
-                  <div class="why-use-02__images">
-                     <div class="why-use-02__image">
-                        <img src="@img/why-use/group.jpg" alt="Image">                        
-                        <!-- <img src="@img/why-use/image-01.jpg" alt="Image"> -->
-                        <!-- <div class="why-use-02__image-small">
-                           <img src="@img/why-use/image-02.jpg" alt="Image">
-                        </div> -->
+
+               <div class="service-5__pictur pictur">
+                  <div class="pictur__image-big">
+                     <img src="@img/why-use/image-01.jpg" alt="Image">
+                     <div class="pictur__image-small">
+                        <img src="@img/why-use/image-02.jpg" alt="Image">
                      </div>
                   </div>
                </div>
