finish section why-use-02

--- a/src/home-02.html
+++ b/src/home-02.html
@@ -48,13 +48,9 @@
             </div>
          </section>
 
-
-
-
-         <section class="page__service-5 service-5">
-
-            <div class="service-5__container">
-               <div class="service-5__info-2 info-2">
+         <section class="page__why-use-02 why-use-02">
+            <div class="why-use-02__container">
+               <div class="why-use-02__info-2 info-2">
                   <div class="info-2__content">
                      <div class="info-2__box">
                         <div class="info-2__subtitle">WELCOME</div>
@@ -73,12 +69,10 @@
                      </div>
                   </div>
                </div>
-
-
-               <div class="service-5__pictur pictur">
-                  <div class="pictur__image-big">
+               <div class="why-use-02__pictures pictures">
+                  <div class="pictures__image-big">
                      <img src="@img/why-use/image-01.jpg" alt="Image">
-                     <div class="pictur__image-small">
+                     <div class="pictures__image-small">
                         <img src="@img/why-use/image-02.jpg" alt="Image">
                      </div>
                   </div>
