--- a/src/home-02.html
+++ b/src/home-02.html
@@ -296,7 +296,8 @@
                   </div>
 
                   <div class="support__conditions">
-                     <ul class="support__items">
+                     <ul class="support__items"> 
+                        <li><a href="#">Что-то</a></li>                       
                         <li>Privacy Policy</li>
                         <li>Terms and conditions</li>
                         <li>Contact</li>
