--- a/src/home-01.html
+++ b/src/home-01.html
@@ -240,19 +240,19 @@
                   <div class="design__offers">
                      <ul class="design__items">
                         <li class="design__item">
-                           <img src="@img/protection/birdie.svg" alt="birdie">
+                           <img src="@img/protection/birdie-02.svg" alt="birdie">
                            <p>Use PrivateSurf VPN on every device</p>
                         </li>
                         <li class="design__item">
-                           <img src="@img/protection/birdie.svg" alt="birdie">
+                           <img src="@img/protection/birdie-02.svg" alt="birdie">
                            <p>One click to a safer internet</p>
                         </li>
                         <li class="design__item">
-                           <img src="@img/protection/birdie.svg" alt="birdie">
+                           <img src="@img/protection/birdie-02.svg" alt="birdie">
                            <p>Secure access, worldwide</p>
                         </li>
                         <li class="design__item">
-                           <img src="@img/protection/birdie.svg" alt="birdie">
+                           <img src="@img/protection/birdie-02.svg" alt="birdie">
                            <p>Stronger data protection</p>
                         </li>
                      </ul>
