--- a/src/home-02.html
+++ b/src/home-02.html
@@ -297,11 +297,10 @@
 
                   <div class="support__conditions">
                      <ul class="support__items"> 
-                        <li><a href="#">Что-то</a></li>                       
-                        <li>Privacy Policy</li>
-                        <li>Terms and conditions</li>
-                        <li>Contact</li>
-                        <li>How to uninstall</li>
+                        <li><a href="#" class="support__link">Privacy Policy</a></li>
+                        <li><a href="#" class="support__link">Terms and conditions</a></li>
+                        <li><a href="#" class="support__link">Contact</a></li>
+                        <li><a href="#" class="support__link">How to uninstall</a></li>
                      </ul>
                   </div>
                </div>
